<resources>
    <string name="app_name">ApparcameProyecto</string>
    <string name="imagenlogoinicio">imagenLogoInicio</string>
    <string name="login">LOGIN</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repite_contrase_a">Repite contraseña</string>
    <string name="tel_fono">Teléfono</string>
    <string name="limpieza_interna_16_95">Limpieza interna(+16,95€)</string>
    <string name="lavado_externo_6_95">Lavado externo (+6,95€)</string>
    <string name="funda_para_el_coche_9_95">Funda para el coche(+9,95€)</string>
    <string name="extras">Extras:</string>
    <string name="fecha_de_entrega_veh_culo">Fecha de entrega vehículo</string>
    <string name="hora_de_entrega">Hora de entrega</string>
    <string name="hora_de_recogida">Hora de recogida</string>
    <string name="marca_veh_culo">Marca vehículo</string>
    <string name="modelo_veh_culo">Modelo vehículo</string>
    <string name="matr_cula_veh_culo">Matrícula vehículo</string>
    <string name="solicitar">Solicitar</string>
    <string name="calendarioentrada">calendarioEntrada</string>
    <string name="calendariohoraentrada">calendarioHoraEntrada</string>
    <string name="calendariorecogida">calendarioRecogida</string>
    <string name="calendariohorarecogida">calendarioHoraRecogida</string>
    <string name="fecha_recogida_veh_culo">Fecha recogida vehículo</string>
    <string name="volverallogin">volverAlLogin</string>
    <string name="direcci_n">Dirección</string>
    <string name="comprobar_servicios">Comprobar servicios</string>
    <string name="solicitar_servicio">Solicitar servicio</string>
    <string name="perfil">Perfil</string>
    <string name="hola">Hola!</string>
    <string name="ayuda">Ayuda</string>
    <string name="icono_menu">Icono menu</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="solictar_imagen">Solictar imagen</string>
    <string name="desconectarse">Desconectarse</string>
    <string name="tarifas">Tarifas</string>
    <string name="total_d_as">Total días:</string>
    <string name="d_as">Días</string>
    <string name="precio_por_d_a">Precio por día:</string>
    <string name="lavado_externo">Lavado externo</string>
    <string name="limpieza_interna">Limpieza interna</string>
    <string name="funda_para_el_coche">Funda para el coche</string>
    <string name="preciopordia">preciopordia</string>
    <string name="plaexterno">pLaExterno</string>
    <string name="pfunda">pFunda</string>
    <string name="plainterno">pLaInterno</string>
    <string name="total">TOTAL</string>
    <string name="_0">0</string>
    <string name="confirmar_solicitud">Confirmar solicitud</string>
    <string name="nuestros_precios">Nuestros precios</string>
    <string name="correo">Correo</string>
    <string name="redireccionayuda">RedireccionAyuda</string>
    <string name="necesitas_ayuda">¿Necesitas ayuda?</string>
</resources>
