<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal">

    <TextView
        android:id="@+id/textView"
        android:layout_width="249dp"
        android:layout_height="42dp"
        android:background="#6ED16A4E"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onSolicitarServicioAction"
        android:text="@string/solicitar_servicio"
        android:textIsSelectable="true"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="73dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/solictar_imagen"
        android:onClick="onSolicitarServicioAction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17"
        app:srcCompat="@drawable/serviceicon" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="73dp"
        android:layout_height="49dp"
        android:contentDescription="@string/ayuda"
        android:onClick="irAyuda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.183"
        app:srcCompat="@drawable/aiuda" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="73dp"
        android:layout_height="49dp"
        android:contentDescription="@string/editar_perfil"
        android:onClick="noImplementado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.091"
        app:srcCompat="@drawable/profile" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="73dp"
        android:layout_height="49dp"
        android:contentDescription="@string/tarifas"
        android:onClick="noImplementado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.127"
        app:srcCompat="@drawable/money" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="249dp"
        android:layout_height="42dp"
        android:background="#6E4B154A"
        android:onClick="irAyuda"
        android:text="@string/necesitas_ayuda"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.175" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="249dp"
        android:layout_height="42dp"
        android:background="#6E2979FF"
        android:onClick="noImplementado"
        android:text="@string/perfil"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.124" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="249dp"
        android:layout_height="42dp"
        android:background="#6EFFC400"
        android:onClick="noImplementado"
        android:text="@string/nuestros_precios"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.131" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="249dp"
        android:layout_height="42dp"
        android:background="#6D73CE61"
        android:onClick="noImplementado"
        android:text="@string/comprobar_servicios"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.093" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="73dp"
        android:layout_height="49dp"
        android:contentDescription="@string/comprobar_servicios"
        android:onClick="noImplementado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.073"
        app:srcCompat="@drawable/buscarservicio" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="62dp"
        android:layout_height="53dp"
        android:backgroundTint="#00AF1A1A"
        android:contentDescription="@string/desconectarse"
        android:onClick="onDesconectarseAction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.979"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.733"
        app:srcCompat="@drawable/salir" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="123dp"
        android:layout_height="24dp"
        android:text="@string/desconectarse"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButton2" />

</androidx.constraintlayout.widget.ConstraintLayout>